WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75059
AX: attributed strings do not include AXHeading information when a link is contained within the heading
https://bugs.webkit.org/show_bug.cgi?id=75059
Summary
AX: attributed strings do not include AXHeading information when a link is co...
chris fleizach
Reported
2011-12-21 17:51:14 PST
When asking for an attributed string, the heading level is not included if there is a link inside the heading like <h1><a href="#">link</a></h1>
Attachments
patch
(14.64 KB, patch)
2011-12-21 23:49 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(14.64 KB, patch)
2011-12-21 23:51 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(14.63 KB, patch)
2011-12-21 23:53 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-12-21 23:49:08 PST
rdar://10614265
chris fleizach
Comment 2
2011-12-21 23:49:40 PST
Created
attachment 120280
[details]
patch
chris fleizach
Comment 3
2011-12-21 23:51:46 PST
Created
attachment 120281
[details]
patch
chris fleizach
Comment 4
2011-12-21 23:53:16 PST
Created
attachment 120282
[details]
patch
chris fleizach
Comment 5
2011-12-22 10:03:48 PST
http://trac.webkit.org/changeset/103552
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug